changed author info

--- a/pins.cabal
+++ b/pins.cabal
@@ -8,7 +8,7 @@ synopsis:            Yet another Pokemon Showdown clone, except written in Haske
 license:             GPL-3
 license-file:        LICENSE
 author:              Raymoo
-maintainer:          dontemailme@thisisfake.com
+maintainer:          uguu@installgentoo.com
 -- copyright:           
 category:            Web
 build-type:          Simple
